# axioma-agent

./: CMakeLists.txt  README.md  ax-rtm-verify.py
include/axilog/: agent.h
src/: agent.c
tests/identity/: test_agent_totality.c
